casi listo todo de mi parte

--- a/cotizador_acerta/static/css/navbar.css
+++ b/cotizador_acerta/static/css/navbar.css
@@ -3,9 +3,16 @@
     color: #ffffff;
 }
 
+#navbar {
+    width: 100%;
+    float: left;
+    margin: 0 0 1em 0;
+    padding: 0;
+}
+
 .nav li a:hover{
     background: transparent;
-    color: black;
+    color: #E76C42;
     border-bottom: 5px solid #E76C42;
 }
 
@@ -28,16 +35,9 @@
     padding-left: 255px;
 }
 
-.menu .servicios{
-    margin-left: 300px;
-    position: relative;
-    top:6px;
-    width: 150px;
-}
-
 .menu{
     background: #F3F3F3;
-    width: 1500px;
+    width: 100%;
     padding-left: 4.5%;
     border-bottom: 6px solid #E76C42;
 }
@@ -50,13 +50,13 @@
 .navbar-but{
     position: relative;
     top:6px;
-    width: 150px;
+    width: 100%;
 }
 
 .navbar-line{
     position: relative;
     top: -20px;
-    width: 1180px;
+    width: 100%;
     left: -60px;
     margin-bottom: 0;
 }
