--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -1,12 +1,12 @@
 {% load static %}
-<div class="row" id="navbar">
+<div id="navbar">
     <ul class="nav navbar-nav menu">
         <li>
-            <a href="#" style="border-bottom:none"><span><img src="{% static 'img/AcertaSeguros.png' %}"> &nbsp;</span></a>
+            <a href="{% url 'login' %}" style="border-bottom:none"><span><img src="{% static 'img/AcertaSeguros.png' %}"> &nbsp;</span></a>
         </li>
         <li style="float: right;">
         	{% if user.is_authenticated %}
-            	<a href="{% url 'logout' %}" style="color:#E76C42;">Cerrar Sesión</a>
+            	<a href="{% url 'logout' %}">Cerrar Sesión</a>
             {% endif %}
         </li>
         <li style="float: right;">
@@ -17,7 +17,7 @@
             {% endif %}
         </li>
         <li style="float: right;">
-            <a href="#" style="color:gray; border-bottom: 5px solid #E76C42;">{{ user.get_full_name|default:user.username }}</a>
+            <a href="#">{{ user.get_full_name|default:user.username }}</a>
         </li>
     </ul>
 </div>
