--- a/cotizador_acerta/templates/login.html
+++ b/cotizador_acerta/templates/login.html
@@ -84,11 +84,13 @@
                         </div><br>
 
                         {% buttons %}
+                            <div class="col-md-2"></div>
                             <div class="col-sm-4 col-md-8 text-center">
                                 <button type="submit" class="btn btn-lg calculate">
                                     ENTRAR
                                 </button>
                             </div>
+                            <div class="col-md-2"></div>
                         {% endbuttons %}
                     </form>
                 </div><!-- /.login-box-body -->
